[package]
name = "tjat"
version = "0.1.2"
edition = "2024"
license = "Apache-2.0"
description = "productivity, in your terminal."
authors = ["yinka olotin olayinka@kubeaid.io"]
repository = "https://github.com/yinkaolotin/tjat"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
